tests/snapshots/snapshots/snapshots__snapshots__cli_output__doctor_output.snap
---
source: tests/snapshots/cli_output.rs
expression: normalize_output(&output.stdout)
---
br doctor
HEALTH workspace: healthy
OK jsonl.merge_artifacts
OK base_jsonl
OK doctor.runs_dir
OK doctor.runs_creatable
OK permissions.recovery_dir
OK permissions.write_lock
OK permissions.root_gitignore
OK permissions.config_yaml_secrets
OK br_path_dupes
OK gitignore.beads_inner_present
OK tmp_files_orphan
OK br_history.size
OK routes_jsonl: No routes.jsonl present (ID-REDACTED routing is optional)
OK rust_log: RUST_LOG=error (quiet)
OK permissions.beads_dir: <platform message>
OK config.yaml: config.yaml parses cleanly (99 bytes)
OK metadata.json: metadata.json parses cleanly (62 bytes); declared targets exist on disk
OK binary_version: Running br X.Y.Z; no beads_rust Cargo.toml reachable from .beads/ — not flagging
OK write_lock: .beads/.write.lock is 0s old (within 300s threshold); not stale
OK routes.targets: No local or town routes.jsonl present (route targets are optional)
OK startup_cache.health
OK permissions.jsonl_world_writable
OK jsonl_crlf
OK jsonl_bom
OK jsonl_eof_newline
OK jsonl_size
OK jsonl.duplicate_ids
OK sync_jsonl_path: JSONL path is within sync allowlist
OK sync_conflict_markers: No merge conflict markers found
OK jsonl.parse: Parsed 0 records
OK dep.dead_closed_blocking_edges
OK dep.fully_unblocked_open
OK db_bloat
OK wal_size
OK db.recovery_artifacts
OK db.recovery_artifacts.aged
OK db.sidecars
OK schema.tables
OK schema.columns
OK db.recoverable_anomalies
OK db.null_defaults
OK sqlite.integrity_check
OK db.export_hash_cache
OK base_jsonl.missing_post_flush
OK dirty_bitmap
OK comments.orphans
OK labels.orphans
OK dependencies.orphans
OK audit.suspect_close_reasons
OK counts.db_vs_jsonl: Both have 0 records
OK sync.metadata: External changes pending import (empty JSONL, nothing to import)
OK db.write_probe: No issues available for ID-REDACTED write probe
OK sqlite3.integrity_check: <platform message>
