tests/snapshots/snapshots/snapshots__snapshots__cli_output__info_output.snap
---
source: tests/snapshots/cli_output.rs
expression: normalized
---
Database: /WORKSPACE/.beads
Mode: direct
Issues: N

Configuration:
  issue_prefix: bd
