tests/snapshots/snapshots/snapshots__snapshots__cli_output__info_with_schema.snap
---
source: tests/snapshots/cli_output.rs
expression: normalized
---
Database: /WORKSPACE/.beads
Mode: direct
Issues: N

Configuration:
  issue_prefix: bd

Schema:
  Tables: blocked_issues_cache, child_counters, comments, config, dependencies, dirty_issues, events, export_hashes, issues, labels, metadata
