tests/snapshots/snapshots/snapshots__snapshots__cli_output__version_output.snap
---
source: tests/snapshots/cli_output.rs
expression: normalize_output(&output.stdout)
---
br version X.Y.Z (BUILD)
