tests/snapshots/snapshots/snapshots__snapshots__cli_output__where_output.snap
---
source: tests/snapshots/cli_output.rs
expression: normalized
---
Beads directory: /WORKSPACE/.beads
Prefix: bd
Database: /WORKSPACE/.beads
